2010-08-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Improve robustness of mdate-sh script.
	* lib/mdate-sh: Sanitize zsh behavior on startup, to ensure
	$ls_command is word-split properly upon invocation.
	(error): New function.
	(main): Use it.  Improve error checking to avoid endless loop
	in case $ls_command gave bogus output.  Fix eval quotation.
	* tests/mdate6.test: New test, to expose eval quotation error.
	* tests/Makefile.am: Update.

2010-08-18  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix potential regressions in depcomp{3,5}.test.
	* tests/depcomp3.test: Do not uselessly escape the character `$'
	in makefile rules, when it's used to expand a make macro.
	* tests/depcomp5.test: Likewise.

2010-08-17  Stefano Lattarini  <stefano.lattarini@gmail.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Docs: clarify how to avoid automatic dependencies tracking.
	* doc/automake.texi (Automatic dependency tracking): Mention that
	automatic dependencies tracking is enabled by default, but that
	the package developer can disable it altogether.  Add a reference
	to the proper section for a more in-depth explanation.

	Fix typo in manual (`Makefile.in' instead of `Makefile.am').
	* doc/automake.texi (Automatic dependency tracking): Fix typo.

2010-08-16  Bruno Haible  <bruno@clisp.org>

	Don't hide the table of contents.
	* doc/automake.texi: Move the table of contents to the beginning.

2010-08-10  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Tweak and/or extend some `acloca*.test' tests.
	* tests/aclocal8.test:  Ensure verbose printing of captured
	output.
	* tests/aclocal.test: Likewise.  Also, add trailing `:'
	command.
	* tests/acloca19.test: Likewise.
	* tests/aclocal5.test: Add trailing `:' command, and prefer
	`$me' over hard-coded test name.
	* tests/aclocal6.test: Likewise.
	* tests/aclocal18.test: Add trailing `:' command, and make
	some grepping slighty stricter.
	* tests/acloca14.test: Likewise.  Also, prefer `diff' over