@@ -1,3 +1,11 @@
+2010-08-27  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	Fix bug in test missing6.test.
+	* tests/missing6.test: Fix the hack used to edit `configure.in',
+	to avoid producing a configure script that breaks with shells
+	that do not support $LINENO.  Also throw in a couple of cosmetic
+	changes.
+
 2010-08-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Improve robustness of mdate-sh script.
